fixed the z-index issue with icon card

--- a/main/assets/css/components/_icon_card.scss
+++ b/main/assets/css/components/_icon_card.scss
@@ -39,6 +39,7 @@
     background-size: contain;
     background-position: center;
     transform: rotate(var(--deg));
+    z-index: -1;
   }
 
   &__icon--90 {
